@@ -1,3 +1,9 @@
+2004-05-05  Tim Perdue  <tim@perdue.net>
+
+	* fixed default_page.php after bugs were introduced
+	* added proper checks to /exports/ files
+
+
 2004-05-04  Tom Copeland <tom@infoether.com>
 
 	* www/my/index.php: Fixed bug #788: Site admin's 'my page' shows 
